refactor: CORS 및 OAuth2 redirect URI를 환경변수로 분리
- SecurityConfig CORS origin을 환경변수(CORS_ALLOWED_ORIGINS)로 변경
- OAuth2 redirect URI를 환경변수(OAUTH2_REDIRECT_URI)로 변경
- server, springdoc 설정 복원

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>